Checking in grid

--- a/views/game_start.jade
+++ b/views/game_start.jade
@@ -2,4 +2,5 @@
 extends layout
 block content
     body#start_game
-        h3.panel-title Welcome to Square Smash! you are play area
+        canvas#paper(width='1900', height='1000')
+            | Your browser needs to support canvas for this to work!
