--- a/views/layout.jade
+++ b/views/layout.jade
@@ -85,5 +85,5 @@ html
         script(type='text/javascript', src='/bower_components/messenger/build/js/messenger.min.js')
         script(type='text/javascript', src='/bower_components/messenger/build/js/messenger-theme-future.js')
         script(type='text/javascript', src='/bower_components/highcharts/highcharts.js')
-        script(type='text/javascript', src='/socket.io/socket.io.js')
+        script(type='text/javascript', src='/socket.io/lib/socket.io.js')
         script(type='text/javascript', src='/javascripts/squaresmash.js')
