--- a/views/play.jade
+++ b/views/play.jade
@@ -24,37 +24,37 @@ block content
                         .row
                             label Choose The Grid Size
                         .row
-                            label(id='num_rows')  Number of Rows
-                            select
-                                option(value='m3', selected='') 3
-                                option(value='m4') 4
-                                option(value='m5') 5
-                                option(value='m6') 6
-                                option(value='m7') 7
-                                option(value='m8') 8
-                                option(value='m9') 9
-                                option(value='m10') 10
+                            label Number of rows
+                            select#num_rows(name='num_rows')
+                                option(value='3', selected='') 3
+                                option(value='4') 4
+                                option(value='5') 5
+                                option(value='6') 6
+                                option(value='7') 7
+                                option(value='8') 8
+                                option(value='9') 9
+                                option(value='10') 10
                         .row
-                            label(id='num_columns') Number of Columns
-                            select
-                                option(value='n3', selected='') 3
-                                option(value='n4') 4
-                                option(value='n5') 5
-                                option(value='n6') 6
-                                option(value='n7') 7
-                                option(value='n8') 8
-                                option(value='n9') 9
-                                option(value='n10') 10
+                            label Number of Columns
+                            select#num_columns(name='num_columns')
+                                option(value='3', selected='') 3
+                                option(value='4') 4
+                                option(value='5') 5
+                                option(value='6') 6
+                                option(value='7') 7
+                                option(value='8') 8
+                                option(value='9') 9
+                                option(value='10') 10
                         .row
-                            label(id='max_players') Number of players
-                            select
-                                option(value='p2', selected='') 2
-                                option(value='p3') 3
-                                option(value='p4') 4
-                                option(value='p5') 5
-                                option(value='p6') 6
-                                option(value='p7') 7
-                                option(value='p8') 8
+                            label Number of players
+                            select#max_players(name='max_players')
+                                option(value='2', selected='') 2
+                                option(value='3') 3
+                                option(value='4') 4
+                                option(value='5') 5
+                                option(value='6') 6
+                                option(value='7') 7
+                                option(value='8') 8
 
                 .panel-footer
                     button.btn.btn-default.center-block(type='submit') Start the Game
