--- a/views/layout.jade
+++ b/views/layout.jade
@@ -43,7 +43,7 @@ html
                             i.fa.fa-eye
                             |  Tv
                     li.active(class='{{#if isSearchPage}} {{/if}}')
-                        a(href='/search', title='Search a game')
+                        a(href='/start_game', title='Search a game')
                             i.fa.fa-search
                             |  Search
                     //li.active(class='{{#if isAccountPage}} {{/if}}')
@@ -85,5 +85,5 @@ html
         script(type='text/javascript', src='/bower_components/messenger/build/js/messenger.min.js')
         script(type='text/javascript', src='/bower_components/messenger/build/js/messenger-theme-future.js')
         script(type='text/javascript', src='/bower_components/highcharts/highcharts.js')
-        script(type='text/javascript', src='/socket.io/lib/socket.io.js')
+        //script(type='text/javascript', src='/socket.io/lib/socket.io.js')
         script(type='text/javascript', src='/javascripts/squaresmash.js')
