--- a/views/play.jade
+++ b/views/play.jade
@@ -1,6 +1,11 @@
 extends layout
 block content
-   .row
+    head
+        meta(charset='UTF-8')
+        title Socket.IO Chat Example
+        link(rel='stylesheet', href='/stylesheets/game_style.css')
+
+    .row
     .col-md-6.col-md-offset-3
         .panel.panel-info
             .panel-heading
@@ -55,7 +60,9 @@ block content
                                 option(value='6') 6
                                 option(value='7') 7
                                 option(value='8') 8
-
+                        .row
+                            label Enter your UserName
+                            input(type='text', name='user_name')
                 .panel-footer
                     button.btn.btn-default.center-block(type='submit') Start the Game
 
