--- a/public/stylesheets/game_style.css
+++ b/public/stylesheets/game_style.css
@@ -71,15 +71,6 @@ ul {
   text-align: center;
   width: 400px;
 }
-.login.page .form .roomInput {
-  background-color: transparent;
-  border: none;
-  border-bottom: 2px solid #fff;
-  outline: none;
-  padding-bottom: 15px;
-  text-align: center;
-  width: 400px;
-}
 
 .login.page .title {
   font-size: 200%;
@@ -109,6 +100,17 @@ ul {
 
 .chat.page {
   display: none;
+}
+
+.grid.page {
+    display: none;
+    height: 100px;
+    margin-top: -100px;
+    position: absolute;
+
+    text-align: center;
+    top: 50%;
+    width: 100%;
 }
 
 /* Font */
