Index page UI clean up

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,32 +9,32 @@ block content
         .col-md-6.trg
             .panel.panel-info
                 .panel-heading
-                    h3.panel-title Top rated live game on Chess Hub
+                    h3.panel-title Join games on Square Smash
                 .panel-body
                     #trg
-                    .caption
-                        h5.text-center
-                            i.fa.fa-circle-o
-                            |  G. Kasparov
-                            em vs
-                            i.fa.fa-circle
-                            |  V. Anand
-                        h5.text-center
-                            a(href='/tv')
-                                i.fa.fa-eye
-                                |  View game on Chess Hub Tv
+                    //.caption
+                    //    h5.text-center
+                    //        i.fa.fa-circle-o
+                    //        |  G. Kasparov
+                    //        em vs
+                    //        i.fa.fa-circle
+                    //        |  V. Anand
+                    //    h5.text-center
+                    //        a(href='/tv')
+                    //            i.fa.fa-eye
+                    //            |  View game on Chess Hub Tv
         .col-md-6.pod
             .panel.panel-info
                 .panel-heading
                     h3.panel-title Puzzle of the day
                 .panel-body
-                    #pod(data-fen='{{ puzzle.content }}')
+                    #pod(data-fen='Puzzle')
                     .caption
-                        h5.text-center {{ puzzle.comment }}
-                        h5.text-center
-                            a#podSolution(href='javascript:void(0)', data-toggle='popover', data-placement='bottom', data-content='{{ puzzle.solution }}')
-                                i.fa.fa-question-circle
-                                |  Show solution
+                        h5.text-center You have 32 numbers. What is the least number of comparison needed to find the 2nd smallest out of them?
+                        //h5.text-center
+                        //    a#podSolution(href='javascript:void(0)', data-toggle='popover', data-placement='bottom', data-content='Play a tournament between 32 teams')
+                        //        i.fa.fa-question-circle
+                        //        |  Show solution
         #logoutSuccess(hidden='hidden') {{ logoutSuccessMessage }}
         #registerSuccess(hidden='hidden') {{ registerSuccessMessage }}
         #welcomeMessage(hidden='hidden') {{ welcomeMessage }}
