--- a/views/layout.jade
+++ b/views/layout.jade
@@ -55,10 +55,10 @@ html
                         a(href='/logout', title='Sign out')
                             i.fa.fa-sign-out
                              //    {{else}}
-                    li.active(class='{{#if isLoginPage}} {{/if}}')
-                        a(href='/login')
-                            i.fa.fa-sign-in
-                            |  Sign in
+                    //li.active(class='{{#if isLoginPage}} {{/if}}')
+                    //    a(href='/login')
+                    //        i.fa.fa-sign-in
+                    //        |  Sign in
                 h3
                     i.fa.fa-group
                     |  SquareSmash
