Update README and a bit of code cleanup

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -43,7 +43,7 @@ html
                             i.fa.fa-eye
                             |  Tv
                     li.active(class='{{#if isSearchPage}} {{/if}}')
-                        a(href='/start_game', title='Search a game')
+                        a(href='/search', title='Search a game')
                             i.fa.fa-search
                             |  Search
                     //li.active(class='{{#if isAccountPage}} {{/if}}')
